# new-soils

./: CMakeLists.txt  LICENSE  README.md  windows_build.bat  windows_clean.bat
include/: imgui_impl_opengl3.h
resource/shaders/: raytrace.frag  raytrace.vert
src/: main.cpp
